- index operator can now be applied to backtick expressions
- collapsed implementation of &skip and &consume; they now refer 
  to the same function.
- added &readAsObject and &writeAsObject to read/write serialized
  Java objects (in lieu of sleep.runtime.Scalar objects)
- updated &copy to accept either a singular scalar or a hash 
  argument.

2.1-beta 20  (12 Nov 07)
===========
- fix debug mode 24 error handling inconsistency bug.
- $null passed as a Java string now evaluates to null and not ""
- sleep arrays now allow $null elements when converting to Java
  arrays.
- updated fork() to use script name AND line number information
  for thread description.  will aid debugging.
- updated read-only array, hash wrappers to display a warning 
  when a script attempts a modifying operation
- updated array, hash wrappers to marshall wrapped types into
  Sleep types as appropriate.

2.1-beta 19  (24 Oct 07)
===========
- sleep interpreter now performs better stack hygeine to prevent 
  exceptions and errors from corrupting the stack inadvertently.
- $null now deserializes as its singleton value.  this fixes a lot of
  potential pitfalls for scripts that rely heavily on serializing and
  deserializing Sleep functions.  
- closure context metadata (regex matcher and iterator for foreach 
  loops) is no longer serialized with the closure...  beware of this.
- added &ohash(...) to initialize a Sleep hash that keeps track of
  key insertion order.  requested by Marty.
- updated the sleep listen(...) and connect(...) functions to accept a
  number of key/value options.  options include:
     linger  => the value of SO_LINGER (how long (ms) the socket waits 
               for a TCP reset before actually closing.
     lport   => the local port to bind to
     laddr   => the local address to bind to
     backlog => the number of connections to queue while waiting for
                a subsequent call of listen(...) to accept a 
                connection.
