@@ -1,0 +1,26 @@
+#
+# fork, sharing values...  
+#
+
+$counter = 90;
+
+fork({
+  while ($counter < 100)
+  {
+     $counter++;
+     println("A: $counter");
+     [Thread yield];
+  }
+
+}, \$counter);
+
+fork({
+  sleep(500); # I hate time kludges...
+
+  while ($counter < 100)
+  {
+     $counter++;
+     println("B: $counter");
+     [Thread yield];
+  }
+}, \$counter);
