@@ -1,0 +1,2 @@
+%(k => 'kiwi', a => 'apple', g => 'grape fruit', b => 'bananna')
+@('k', 'a', 'g', 'b')
