@@ -1,0 +1,5 @@
+4.57
+4.569
+4.569
+4.567954
+4.567953
